[package]
name = "eborhft"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/common",
    "crates/event_engine",
    "crates/market_agent",
    "crates/feeder",
    "crates/orderbook"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
market_agent = { path = "crates/market_agent" }
event_engine = { path = "crates/event_engine" }
orderbook = { path = "crates/orderbook" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
feeder = { path = "crates/feeder" }
chrono = "0.4"
ringbuf = "0.2"
async-trait = "0.1"
tokio = { version = "1.0", features = ["macros", "net", "time","rt-multi-thread"] }
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
log = "0.4"
crossbeam-channel = "0.5"
affinity = "0.1.2"


[workspace.dependencies]
reqwest = { version = "0.11", features = ["json"] }
market_agent = { path = "crates/market_agent" }
event_engine = { path = "crates/event_engine" }
feeder = { path = "crates/feeder" }
ringbuf = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
async-trait = "0.1"
futures-util = "0.3"
tokio = { version = "1.0", features = ["macros", "net", "time","rt-multi-thread", "sync"] }
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
url = "2.2"
crossbeam-channel = "0.5"
ordered-float = "2.10.0"




# 二进制文件
[[bin]]
name = "test1"
path = "bins/test1.rs"

[[bin]]
name = "test2"
path = "bins/test2.rs"

[[bin]]
name = "test_event_dispatcher"
path = "bins/test/test_event_dispatcher.rs"

[[bin]]
name = "test_ws_ee_logic"
path = "bins/test/test_ws_ee_logic.rs"

[[bin]]
name = "test_bws"
path = "bins/test/test_bws.rs"

[[bin]]
name = "test_bma"
path = "bins/test/test_bma.rs"

[[bin]]
name = "test_event_type"
path = "bins/test/test_event_type.rs"

[[bin]]
name = "test_bma_sync"
path = "bins/test/test_bma_sync.rs"

[[bin]]
name = "test_orderbook"
path = "bins/test/test_orderbook.rs"


[[bin]]
name = "test_ob_and_ee"
path = "bins/test/test_ob_and_ee.rs"