[package]
name = "market_agent"
version = "0.1.0"
edition = "2024"


[dependencies]
ringbuf = { workspace = true }  # 让 sublib 使用 workspace 共享的 ringbuf
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
url = { workspace = true }

event_engine = { workspace = true }
feeder = { workspace = true }

crossbeam-channel = {workspace = true}
